--- a/notebooks/02_model_training.ipynb
+++ b/notebooks/02_model_training.ipynb
@@ -2,9 +2,53 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Loaded dataset shape: (4231262, 27)\n",
+            "Datatype coverage (cleaned data):\n",
+            " object     14\n",
+            "int64      10\n",
+            "float64     2\n",
+            "bool        1\n",
+            "Name: count, dtype: int64\n",
+            "Available feature columns (excluding target): 26\n",
+            "Sample preserved columns: ['TEAM_NAME', 'PLAYER_NAME', 'LOC_X', 'LOC_Y', 'SHOT_DISTANCE', 'SHOT_TYPE', 'ACTION_TYPE', 'YEAR', 'SEASON_1', 'SEASON_2']\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "(         LOC_X  LOC_Y  SHOT_DISTANCE  YEAR       SHOT_TYPE  \\\n",
+              " 899817    -9.0  18.75             16  2008  2PT Field Goal   \n",
+              " 2984657  -10.5  18.55             16  2019  2PT Field Goal   \n",
+              " 498554     3.4   8.35              4  2006  2PT Field Goal   \n",
+              " 3820607    8.8  27.85             24  2023  3PT Field Goal   \n",
+              " 348900     4.3  12.45              8  2005  2PT Field Goal   \n",
+              " \n",
+              "                       ACTION_TYPE  \n",
+              " 899817                  Jump Shot  \n",
+              " 2984657       Step Back Jump shot  \n",
+              " 498554   Driving Finger Roll Shot  \n",
+              " 3820607                 Jump Shot  \n",
+              " 348900         Fadeaway Jump Shot  ,\n",
+              " 899817     1\n",
+              " 2984657    0\n",
+              " 498554     0\n",
+              " 3820607    0\n",
+              " 348900     0\n",
+              " Name: SHOT_MADE_FLAG, dtype: int64)"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import os\n",
         "import sys\n",
@@ -51,9 +95,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/lohithkola/Desktop/nba-shot-predictor/.venv/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:473: ConvergenceWarning: lbfgs failed to converge after 500 iteration(s) (status=1):\n",
+            "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT\n",
+            "\n",
+            "Increase the number of iterations to improve the convergence (max_iter=500).\n",
+            "You might also want to scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "  n_iter_i = _check_optimize_result(\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy (LR): 0.626\n",
+            "ROC-AUC (LR): 0.644\n"
+          ]
+        }
+      ],
       "source": [
         "# Build preprocessing\n",
         "preprocessor, feature_list = build_feature_pipeline(df)\n",
@@ -77,9 +145,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "ROC-AUC (XGB): 0.675\n"
+          ]
+        }
+      ],
       "source": [
         "# XGBoost model (optional; requires libomp on macOS)\n",
         "xgb_available = True\n",
@@ -122,9 +198,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Saved XGB model to models/shot_model_xgb.pkl\n"
+          ]
+        }
+      ],
       "source": [
         "import joblib\n",
         "\n",
